--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,14 +1,14 @@
 .banner {
-    position: relative;
-    width: 100vw;
-    height: 80vh;
-    min-height: 550px;
-    max-height: 750px;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  position: relative;
+  width: 100%; /* CHANGED from 100vw to 100% */
+  height: 80vh;
+  min-height: 550px;
+  max-height: 750px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
   
   /* Background Video */
   .backgroundVideo {
